# ChessToTheDeath

./: README.md  pyproject.toml  requirements.txt
chess_to_the_death/: __init__.py  __main__.py
chess_to_the_death/entity/: pieces.py  player.py
chess_to_the_death/parser/: argparser.py
chess_to_the_death/util/: action.py  config.py  definition.py  engine.py  fpsClock.py  gui.py  loader.py  pieces.py  player.py
chess_to_the_death/web/: UpdateChecker.py
tests/: ValueTweaks.py  testPosition.py
